# Udaan_drone

Design/: drone.urdf
workspace/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
workspace/install/my_robot_description/share/my_robot_description/: package.sh
workspace/install/my_robot_description/share/urdf/: drone_design.urdf
workspace/src/my_robot_description/: CMakeLists.txt  drone.urdf.xacro  package.xml  setup.py
workspace/src/my_robot_description/config/: barometer_bridge.yaml  imu_bridge.yaml  lidar_bridge.yaml
workspace/src/my_robot_description/fuzzy_logic/: barometer_module.py  decision_engine.py  fuzzy_controller_node.py  imu_module.py  lidar_module.py
workspace/src/my_robot_description/launch/: bridge_barometer.launch.py  bridge_imu.launch.py  bridge_lidar.launch.py  display.launch.xml  fuzzy_control.launch.py  gazebo.launch.py  spawn_drone_gazebo.launch.py  view_drone.launch.py
workspace/src/my_robot_description/urdf/: drone.urdf  drone.urdf.xacro  drone_design.urdf
workspace/src/my_robot_description/worlds/: my_world.world
